# expresate

./: .gitignore  main.py  mise.toml  pyproject.toml  readme.md  test.py
dbf/: main.py  pyproject.toml
policia/: main.py  pyproject.toml  xlsx_to_json.py
smv/: main.py  pyproject.toml
