[project]
name = "expresate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "geopandas>=1.1.1",
    "marimo>=0.17.2",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "simpledbf>=0.2.6",
]

[tool.uv.workspace]
members = ["smv", "policia"]
